Fix bugs, add features and update dependencies (#93)
* fix: allow anonymous access for authenticated users to studies assigned for a group

* fix: let backend handle logic for current study index

* fix: implicit any in frontend store by sharing constants

* feat: Display status in overview with index/length
closes #44

* fix: Increase timestamp precision for raw export by removing int()
closes #89

* chore: update backend dependencies
